--- a/_posts/2006-10-17-shell%e4%bd%bf%e7%94%a8%e6%8c%87%e5%8d%97.markdown
+++ b/_posts/2006-10-17-shell%e4%bd%bf%e7%94%a8%e6%8c%87%e5%8d%97.markdown
@@ -49,20 +49,20 @@ wget [参数列表] URL
 最简单的用法:
 $wget http://targetdomain.com/file.tar
 wget的常用参数：
-&middot; -t [nuber of times]：尝试次数，当wget无法与服务器建立连接时，尝试连接多少次。比如"-t120"表示尝试120次。当这一项为"0"的时候，指定尝试无穷多次直到连接成功为止，这个设置非常有用，当对方服务器突然关机或者网络突然中断的时候，可以在恢复正常后继续下载没有传完的文件；
-&middot; -c：断点续传，这也是个非常有用的设置，特别当下载比较大的文件的时候，如果中途意外中断，那么连接恢复的时候会从上次没传完的地方接着传，而不是又从头开始，使用这一项需要远程服务器也支持断点续传，一般来讲，基于UNIX/linux的Web/FTP服务器都支持断点续传；
-&middot; -T [number of seconds]：超时时间，指定多长时间远程服务器没有响应就中断连接，开始下一次尝试。比如"-T120"表示如果120秒以后远程服务器没有发过来数据，就重新尝试连接。如果网络速度比较快，这个时间可以设置的短些，相反，可以设置的长一些，一般最多不超过900，通常也不少于60，一般设置在120左右比较合适；
-&middot; -w [number of seconds]：在两次尝试之间等待多少秒，比如"-w 100"表示两次尝试之间等待100秒；
-&middot; -nd：不下载目录结构，把从服务器所有指定目录下载的文件都堆到当前目录里；
-&middot; -x：与"-nd"设置刚好相反，创建完整的目录结构，例如"wget -nd http://www.gnu.org/ "，实际的目录结构一级一级建下去，直到所有的文件都传完为止；
-&middot; -nH：不创建以目标主机域名为目录名的目录，将目标主机的目录结构直接下到当前目录下；
-&middot; -r：递归下载，在本机建立服务器端目录结构；
-&middot; -l [depth]：下载远程服务器目录结构的深度，例如"-l 5"下载目录深度小于或者等于5以内的目录结构或者文件；
-&middot; -m：做站点镜像时的选项，如果你想做一个站点的镜像，使用这个选项，它将自动设定其他合适的选项以便于站点镜像；
-&middot; -np：只下载目标站点指定目录及其子目录的内容。这也是一个非常有用的选项，我们假设某个人的个人主页里面有一个指向这个站点其他人个人主页的连接，而我们只想下载这个人的个人主页，如果不设置这个选项，甚至--有可能把整个站点给抓下来，这显然是我们通常不希望的；
-&middot; --http-user=username
-&middot; --http-passwd=password：如果Web服务器需要指定用户名和口令，用这两项来设定；
-&middot; -O 将数据写入文件中。
+· -t [nuber of times]：尝试次数，当wget无法与服务器建立连接时，尝试连接多少次。比如"-t120"表示尝试120次。当这一项为"0"的时候，指定尝试无穷多次直到连接成功为止，这个设置非常有用，当对方服务器突然关机或者网络突然中断的时候，可以在恢复正常后继续下载没有传完的文件；
+· -c：断点续传，这也是个非常有用的设置，特别当下载比较大的文件的时候，如果中途意外中断，那么连接恢复的时候会从上次没传完的地方接着传，而不是又从头开始，使用这一项需要远程服务器也支持断点续传，一般来讲，基于UNIX/linux的Web/FTP服务器都支持断点续传；
+· -T [number of seconds]：超时时间，指定多长时间远程服务器没有响应就中断连接，开始下一次尝试。比如"-T120"表示如果120秒以后远程服务器没有发过来数据，就重新尝试连接。如果网络速度比较快，这个时间可以设置的短些，相反，可以设置的长一些，一般最多不超过900，通常也不少于60，一般设置在120左右比较合适；
+· -w [number of seconds]：在两次尝试之间等待多少秒，比如"-w 100"表示两次尝试之间等待100秒；
+· -nd：不下载目录结构，把从服务器所有指定目录下载的文件都堆到当前目录里；
+· -x：与"-nd"设置刚好相反，创建完整的目录结构，例如"wget -nd http://www.gnu.org/ "，实际的目录结构一级一级建下去，直到所有的文件都传完为止；
+· -nH：不创建以目标主机域名为目录名的目录，将目标主机的目录结构直接下到当前目录下；
+· -r：递归下载，在本机建立服务器端目录结构；
+· -l [depth]：下载远程服务器目录结构的深度，例如"-l 5"下载目录深度小于或者等于5以内的目录结构或者文件；
+· -m：做站点镜像时的选项，如果你想做一个站点的镜像，使用这个选项，它将自动设定其他合适的选项以便于站点镜像；
+· -np：只下载目标站点指定目录及其子目录的内容。这也是一个非常有用的选项，我们假设某个人的个人主页里面有一个指向这个站点其他人个人主页的连接，而我们只想下载这个人的个人主页，如果不设置这个选项，甚至--有可能把整个站点给抓下来，这显然是我们通常不希望的；
+· --http-user=username
+· --http-passwd=password：如果Web服务器需要指定用户名和口令，用这两项来设定；
+· -O 将数据写入文件中。
 3. Crontab 定时执行任务
 在DreamHost系统下, 通过Shell可以建立自己的crontab. 具体使用如下:
 使用支持shell登录的终端(如fterm或putty), 地址栏输入username@qiran.org:22即可以SSH方式登录至服务器.
