--- a/_posts/2006-10-25-%e7%94%b7%e5%ad%90%e7%83%a7%e9%92%b1%e7%82%b9%e7%83%9f%e7%bd%91%e4%b8%8a%e7%82%ab%e5%af%8c%e8%a2%ab%e6%8c%87%e7%8a%af%e7%bd%aa%e7%bb%84%e5%9b%be.markdown
+++ b/_posts/2006-10-25-%e7%94%b7%e5%ad%90%e7%83%a7%e9%92%b1%e7%82%b9%e7%83%9f%e7%bd%91%e4%b8%8a%e7%82%ab%e5%af%8c%e8%a2%ab%e6%8c%87%e7%8a%af%e7%bd%aa%e7%bb%84%e5%9b%be.markdown
@@ -16,7 +16,7 @@ date_gmt: !binary |-
 <p align="center">
 图片原注：烧钱的艺术(LV黑背心 HBHD TEE)
 <p align="center">核心提示：上海一男子在博客里炫耀自己狂买名牌的奢侈生活，还用大叠百元人民币来点烟……
-　　【新民网&middot;独家稿件】自称“每天眼睛一睁开就是刷卡”、披挂一身名牌、用大叠百元人民币来点烟……日前，一个主要内容为张贴照片炫耀奢侈生活、毫不掩饰地鄙视穷人的上海男子博客成为某热门论坛的讨论焦点。
+　　【新民网·独家稿件】自称“每天眼睛一睁开就是刷卡”、披挂一身名牌、用大叠百元人民币来点烟……日前，一个主要内容为张贴照片炫耀奢侈生活、毫不掩饰地鄙视穷人的上海男子博客成为某热门论坛的讨论焦点。
 　　<strong>博客图文炫耀奢侈生活</strong>
 　　新民网23日上午通过网友提供的链接进入该男子的博客，发现在这个名为“刚果王子&mdash;&mdash;小兔/琼瑶笔下不食人间烟火的男子”的博客空间上，博主的自我介绍里自称“神的孩子爱名牌”、年龄23岁，家住上海，兴趣是吃喝玩乐、开快车、买名牌等。
 　　被网友戏称为“小龙少爷”的博主自2005年9月开始写网络日志，基本内容是描述自己日常的奢侈消费，除不遗巨细地罗列出具体品牌、价格外，还附上各种自拍的图片。在日志中，“少爷”声称自己是“YSL大中华地区代商未来老公”、一个月赚30万，“钱都是自己赚的，而且养了整个家族”、“每天眼睛一睁开就是刷刷刷~~~刷掉老娘(指其母)14万5780 港元”。对自己的露富心态，“少爷”毫不讳言：6月25日发表的一篇日志记录了他和“老婆”在香港坐保时捷敞篷跑车，“热的要死的在维多利亚港旁游车河，老婆说为什么一定要开敞篷，我说给你节约油费不好啊，我说我在上海开车也不开空调全部开窗的，其实明显是为了露富心态……”
