--- a/_posts/2006-11-02-%e6%88%91%e5%81%b7%e7%9c%8b%e4%ba%86%e6%88%91%e5%ae%b6%e5%ad%98%e6%8a%98%ef%bc%8c%e9%92%b1%e5%a4%9a%e5%be%97%e5%90%93%e6%ad%bb%e4%ba%ba%e4%ba%86.markdown
+++ b/_posts/2006-11-02-%e6%88%91%e5%81%b7%e7%9c%8b%e4%ba%86%e6%88%91%e5%ae%b6%e5%ad%98%e6%8a%98%ef%bc%8c%e9%92%b1%e5%a4%9a%e5%be%97%e5%90%93%e6%ad%bb%e4%ba%ba%e4%ba%86.markdown
@@ -22,7 +22,7 @@ PS:最好是700万象素的照片,看的清楚.
 4、我靠 
 楼主家都通上电了. 
 羡慕ing 
-5、真羡慕LZ，偶家里连电都用不起哩。这不，我上网电脑用的电都是从隔壁张三家偷接的哩&middot;！ 
+5、真羡慕LZ，偶家里连电都用不起哩。这不，我上网电脑用的电都是从隔壁张三家偷接的哩·！ 
 6、哇！俺自从俺爹俺娘把俺生下来就从没听说过这么多钱！！ 
 俺家小时候家里就很穷！！没钱买自行车！按只好没天打的去上学！没钱买电视！！只好天天去电影院看电影！最可怜的是俺家没房子！！到现在还只能住在宾馆里！ 
 7、楼主.什么叫存折?从小我就只听过没见过，还有你们那的什么大彩电的?好玩吗?我家就个半导体,还是我爸爸上次进城用半头羊换的, 
