--- a/_posts/2006-12-08-%e6%88%91%e5%b0%86%e6%b0%b8%e8%bf%9c%e7%88%b1%e4%bd%a0-%e6%83%a0%e7%89%b9%e5%a6%ae%c2%b7%e4%bc%91%e6%96%af%e9%a1%bf.markdown
+++ b/_posts/2006-12-08-%e6%88%91%e5%b0%86%e6%b0%b8%e8%bf%9c%e7%88%b1%e4%bd%a0-%e6%83%a0%e7%89%b9%e5%a6%ae%c2%b7%e4%bc%91%e6%96%af%e9%a1%bf.markdown
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 我将永远爱你 - 惠特妮&middot;休斯顿
+title: 我将永远爱你 - 惠特妮·休斯顿
 author: gavinkwoe
 date: !binary |-
   MjAwNi0xMi0wOCAwOToxODo1OCArMDgwMA==
 date_gmt: !binary |-
   MjAwNi0xMi0wOCAwMToxODo1OCArMDgwMA==
 ---
-我将永远爱你 - 惠特妮&middot;休斯顿
+我将永远爱你 - 惠特妮·休斯顿
 专辑: <a title="http://www.douban.com/subject/1418556/" href="http://www.douban.com/subject/1418556/" target="_blank">OST-The Bodyguard</a>
 来自: 美国/英语
 发行: 1992
