--- a/_posts/2006-12-28-%e8%8b%b1%e6%96%87%e7%bd%91%e7%ab%99%e5%a4%a7%e5%85%a8.markdown
+++ b/_posts/2006-12-28-%e8%8b%b1%e6%96%87%e7%bd%91%e7%ab%99%e5%a4%a7%e5%85%a8.markdown
@@ -89,7 +89,7 @@ http://www.prcedu.com/exam/4201.asp 上海热线的英语频道
 http://education.online.sh.cn/education/gb/node/2002-03/20/node_632.htm 北科大四六级专版 
 http://www.ibeike.com/estudy/test.asp 中国在学习网英语培训考前辅导 
 <a href="http://www.studyagain.com/yingyupeixun/" target="_blank">http://www.studyagain.com/yingyupeixun/</a> 三九健康网英语天地 
-http://www.999.com.cn/Professional/Education/Conference/ 温州热线考试指南&middot;各种英语考试 
+http://www.999.com.cn/Professional/Education/Conference/ 温州热线考试指南·各种英语考试 
 <a href="http://edu.wz163.com/kaoshi/list_english.php" target="_blank">http://edu.wz163.com/kaoshi/list_english.php</a> 上外网CET专区 
 http://www.yeworld.net/index/CLO/ 中国成人教育网的下载区，东西不少 
 <a href="http://www.adultedu.net/test/" target="_blank">http://www.adultedu.net/test/</a> 大学英语四级考试2000年1月试卷 
