--- a/_posts/2006-12-29-%e8%8e%b1%e6%98%82%e7%ba%b3%e5%a4%9a%c2%b7%e8%bf%aa%e5%8d%a1%e6%99%ae%e9%87%8c%e5%a5%a5%e8%b5%84%e6%96%99.markdown
+++ b/_posts/2006-12-29-%e8%8e%b1%e6%98%82%e7%ba%b3%e5%a4%9a%c2%b7%e8%bf%aa%e5%8d%a1%e6%99%ae%e9%87%8c%e5%a5%a5%e8%b5%84%e6%96%99.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 莱昂纳多&middot;迪卡普里奥资料
+title: 莱昂纳多·迪卡普里奥资料
 author: gavinkwoe
 date: !binary |-
   MjAwNi0xMi0yOSAxMDoyODoyMyArMDgwMA==
