--- a/_posts/2007-01-04-111%e4%b8%aa%e6%97%b6%e5%b0%9a%e5%93%81%e7%89%8c%e7%bd%91%e7%ab%99.markdown
+++ b/_posts/2007-01-04-111%e4%b8%aa%e6%97%b6%e5%b0%9a%e5%93%81%e7%89%8c%e7%bd%91%e7%ab%99.markdown
@@ -67,7 +67,7 @@ http://www.cfcompany.be/          cfcompany
 <a target="_blank" href="http://www.aldoshoes.com/">http://www.aldoshoes.com/</a>         ALDO
 <a target="_blank" href="http://www.atoslombardini.it/">http://www.atoslombardini.it/</a>     Atoslombardin
 <a target="_blank" href="http://www.harrods.com/">http://www.harrods.com/</a>           Harrods
-<a target="_blank" href="http://www.annasui.com/">http://www.annasui.com/</a>           安娜&middot;苏Anna 
+<a target="_blank" href="http://www.annasui.com/">http://www.annasui.com/</a>           安娜·苏Anna 
 <a target="_blank" href="http://www.carmenelectra.com/">http://www.carmenelectra.com/</a>     carmenelectra
 <a target="_blank" href="http://www.radley.co.uk/">http://www.radley.co.uk/</a>         radley
 <a target="_blank" href="http://www.louisecampbell.com/">http://www.louisecampbell.com/</a>   louisecampbel
