--- a/_posts/2007-01-07-msn%e5%91%a2%e7%a7%b0%e5%a4%a7%e5%85%a8.markdown
+++ b/_posts/2007-01-07-msn%e5%91%a2%e7%a7%b0%e5%a4%a7%e5%85%a8.markdown
@@ -23,7 +23,7 @@ date_gmt: !binary |-
 　　14、牛不群 
 　　15、马无季 
 　　16、善思而李（因为我叫李善思） 
-　　17、基努&middot;李善思（还是因为我叫李善思） 
+　　17、基努·李善思（还是因为我叫李善思） 
 　　18、给我一个支点，我可以撑起地球仪 
 　　19、悄悄地进庄，打飞机的不要 
 　　20、人过留名，雁过留声机 
