--- a/_posts/2007-04-08-%e5%86%ac%e5%ad%a3%ef%bc%8c%e6%89%8b%ef%bc%8c%e8%84%9a%e5%86%bb%e4%bc%a4%e5%8f%91%e7%97%92%e6%9c%89%e6%b2%a1%e6%9c%89%e6%9c%80%e5%a5%bd%e7%9a%84%e6%b2%bb%e7%96%97%e6%96%b9%e6%b3%95%ef%bc%81.markdown
+++ b/_posts/2007-04-08-%e5%86%ac%e5%ad%a3%ef%bc%8c%e6%89%8b%ef%bc%8c%e8%84%9a%e5%86%bb%e4%bc%a4%e5%8f%91%e7%97%92%e6%9c%89%e6%b2%a1%e6%9c%89%e6%9c%80%e5%a5%bd%e7%9a%84%e6%b2%bb%e7%96%97%e6%96%b9%e6%b3%95%ef%bc%81.markdown
@@ -11,7 +11,7 @@ date_gmt: !binary |-
 程较长，冬季还会反复发作，不易根治。对于一些年轻女士而言，不仅影响了双手的美观度，还给生活带来了极大的不便。在治疗方面，虽方 
 法较多，但很少能根治，所以常令人感到棘手。 
 在中医学上来说，由于冻疮患者大多体质阳虚，故气血运行不畅，凝滞脉络，久而久之肌肤便会失去养分，导致阴寒久伏于脉络，因此，冻 
-疮会反复发生。而在夏季治疗冻疮，正是中医学的一大特色。《素问&middot;四气调神大论》中曾提出“春夏养阳”治疗法则。根据中医阴阳四时消 
+疮会反复发生。而在夏季治疗冻疮，正是中医学的一大特色。《素问·四气调神大论》中曾提出“春夏养阳”治疗法则。根据中医阴阳四时消 
 长变化论，人体阳气春夏多生发而旺盛，秋冬多收敛而衰弱，这是人与自然相应的结果。利用夏季气温高，机体阳气充沛的有利时机，调整人 
 体的阴阳平衡，使一些宿疾如冻疮得以恢复。 
 阳虚者，可受夏季自然界阳气隆盛的影响，使人体阳气在夏季处于节律变化的高峰，体内凝寒之气，因此有易除易解可能，加之夏季皮肤毛 
