--- a/_posts/2007-07-16-%e8%a2%ab%e8%af%af%e4%bc%a0%e4%ba%86%e5%87%a0%e5%8d%83%e5%b9%b4%e7%9a%84%e4%b8%83%e5%8f%a5%e8%af%9d.markdown
+++ b/_posts/2007-07-16-%e8%a2%ab%e8%af%af%e4%bc%a0%e4%ba%86%e5%87%a0%e5%8d%83%e5%b9%b4%e7%9a%84%e4%b8%83%e5%8f%a5%e8%af%9d.markdown
@@ -15,7 +15,7 @@ date_gmt: !binary |-
 歪曲程度：8 
 反面影响：9 
 2、民可使由之，不可使知之 
-原句：“子曰：兴于诗，立于礼，成于乐。子曰：民可使由之，不可使知之。”&mdash;&mdash;《论语&middot;秦伯》 
+原句：“子曰：兴于诗，立于礼，成于乐。子曰：民可使由之，不可使知之。”&mdash;&mdash;《论语·秦伯》 
 我们结合上下文的语境，很容易就能得出这句话正确的分句方法：“子曰：兴于诗，立于礼，成于乐。民可，使由之，不可，使知之。” 
 孔子的整句话就是说，诗、礼、乐这三样东西是教育民众的基础，一定要抓好。如果人民掌握了诗、礼、乐，好！让他们自由发挥；如果人民还玩不来这些东西，我们就要去教化他们，让他们知道和明白这些东西。这才是“有教无类”的大教育家孔老先生的本意。 
 歪曲程度：7 
@@ -27,20 +27,20 @@ date_gmt: !binary |-
 歪曲程度：9 
 反面影响：5 
 4 唯女子与小人难养也 
-原句：唯女子与小人难养也，近之则不孙，远之则怨。&mdash;&mdash;《论语&middot;阳货》 
-在《史记&middot;孔子世家》里，提到了孔子之前的卫国之行，孔子“居卫月余，灵公与夫人同车，宦者雍渠参乘出，使孔子为次乘，招摇市过之。孔子曰：&lsquo;吾未见好德如好色者也。&rsquo;于是丑之，去卫。” 
+原句：唯女子与小人难养也，近之则不孙，远之则怨。&mdash;&mdash;《论语·阳货》 
+在《史记·孔子世家》里，提到了孔子之前的卫国之行，孔子“居卫月余，灵公与夫人同车，宦者雍渠参乘出，使孔子为次乘，招摇市过之。孔子曰：&lsquo;吾未见好德如好色者也。&rsquo;于是丑之，去卫。” 
 我来大致翻译一下这段话，当代全国教育劳模孔老先生受卫国国君的邀请，来到了卫国参观学习休养。但在这期间，孔老先生突然发现自己被涮了，人家根本是拿他的身份来炫耀自己抬高自己而已，并不是真正支持他来这教化卫国民众的。尤其是那个卫灵公的老婆，为了抬高自己的身望，公开炫耀，贬低了孔子。 
 孔老先生很郁闷，收拾行李就离开了卫国，离开之后，心情平复了，想起卫国公老婆那种仗着得宠、骄横跋扈乱政扰民的烂事儿，就发了感慨：“唯女子与小人难养也！近之则不孙，远之则怨。” 
 看看孔子的卫国之行，一切都明白了，他这话断不是发神经突然开骂起包括自己老妈在内的所有女人，而是有一个特指的对象，这个对象，就是卫灵公那位老婆南子等人。 
 歪曲程度：6 
 反面影响：9 
 5、吾生也有涯，而知也无涯 
-原句：吾生也有涯，而知也无涯，以有涯随无涯，殆已 &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;《庄子&middot;养生主》 
+原句：吾生也有涯，而知也无涯，以有涯随无涯，殆已 &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;《庄子·养生主》 
 庄子的这句话其实是这样说的，“吾生也有涯，而知也无涯，以有涯随无涯，殆已。”我庄子的生命是有限的，但我面对的知识是无限的，要我以本来有限的生命，去追求那种永远看不到边的尽头，这样会搞死自己的” 
 歪曲程度：8 
 反面影响：3 
 6、相濡以沫 
-原句：相濡以沫，不如相忘于江湖&mdash;&mdash;《庄子&middot;大宗师》 
+原句：相濡以沫，不如相忘于江湖&mdash;&mdash;《庄子·大宗师》 
 相濡以沫，多美的情景，虽然这并不是爱情最理想的状态。当年街道居委会的老大妈就算再没文化，这句话肯定是会说的。只是我们都没曾想到，后边还跟了一句“还可以相忘于江湖” 
 7：天地不仁，以万物为刍狗 
 原句：天地不仁，以万物为刍狗，圣人不仁，以百姓为刍狗&mdash;&mdash;《道德经》 
