--- a/_posts/2008-01-16-%e8%bd%acat%e6%8c%87%e4%bb%a4%e9%9b%86%e5%8f%8as%e5%af%84%e5%ad%98%e5%99%a8.markdown
+++ b/_posts/2008-01-16-%e8%bd%acat%e6%8c%87%e4%bb%a4%e9%9b%86%e5%8f%8as%e5%af%84%e5%ad%98%e5%99%a8.markdown
@@ -308,7 +308,7 @@ AT&S1 DSR根据EIA-232-C的规定操作</blockquote>
 <dir><dir>
 <blockquote>测试只能在非纠错方式下(标准或直接模式)下的异步操作中进行，除参数7和8以外，要中止正在进行中的测试必须首先敲入退出符。若S18非零，则测试经由S18规定的时间后自动中止并显示OK。AT&T0 终止进行中的测试
 AT&T1 启动本地模拟回环
-AT&T3 在本地启动远端数字回环&middot;,若连接未建通,返回ERROR
+AT&T3 在本地启动远端数字回环·,若连接未建通,返回ERROR
 AT&T4 允许调制解调器响应来自远端的进行远程数字环回测试的请求
 AT&T5 拒绝调制解调器响应来自远端的进行远程数字环回测试的求
 AT&T6 启动远端数字环回测试,若连接未通,返回ERROR
