--- a/_posts/2008-01-30-%e6%9c%a8%e4%b9%83%e4%bc%8a%e5%8a%a0%e5%85%a5%e3%80%8a%e7%89%b9%e7%a7%8d%e9%83%a8%e9%98%9f%e3%80%8b%ef%bc%88%e6%9b%b4%e6%96%b0%ef%bc%9a%e7%9b%ae%e5%89%8d%e7%9a%84%e5%ae%8c%e6%95%b4.markdown
+++ b/_posts/2008-01-30-%e6%9c%a8%e4%b9%83%e4%bc%8a%e5%8a%a0%e5%85%a5%e3%80%8a%e7%89%b9%e7%a7%8d%e9%83%a8%e9%98%9f%e3%80%8b%ef%bc%88%e6%9b%b4%e6%96%b0%ef%bc%9a%e7%9b%ae%e5%89%8d%e7%9a%84%e5%ae%8c%e6%95%b4.markdown
@@ -7,11 +7,11 @@ date: !binary |-
 date_gmt: !binary |-
   MjAwOC0wMS0zMCAwMzozMzowMyArMDgwMA==
 ---
-既然由《木乃伊》（The Mummy）导演史蒂芬&middot;索莫斯（Stephen Sommers）执导，那么在《特种部队》（G.I. Joe）中出现他的“老部下”也就情有可原了。据IESB报道，曾在《木乃伊1、2》中扮演“木乃伊Imhotep”的男演员阿诺德&middot;沃斯鲁（Arnold Vosloo）将在《特种部队》中扮演反派“扎坦”（Zartan）。
+既然由《木乃伊》（The Mummy）导演史蒂芬·索莫斯（Stephen Sommers）执导，那么在《特种部队》（G.I. Joe）中出现他的“老部下”也就情有可原了。据IESB报道，曾在《木乃伊1、2》中扮演“木乃伊Imhotep”的男演员阿诺德·沃斯鲁（Arnold Vosloo）将在《特种部队》中扮演反派“扎坦”（Zartan）。
 这个角色在动画版《特种部队》里是几个主要坏蛋之一，是一个为Destro和眼镜蛇部队工作的雇佣兵。他善于伪装成别人的外貌和声音，精通20种语言和方言，是一个腹语和武术专家，擅长的兵器是弓箭。他还是飞车党“Dreadnoks”的首领，患有多重人格和妄想型精神分裂症。
 《特种部队》（G.I. Joe）是派拉蒙继《<a href="http://webmaster.transformersmovie.com/click.html?c=OKYNYR">变形金刚</a>》后又一部根据孩之宝玩具改编的大制作电影。“G.I. Joe”是美国特训特种敢死队的代号，该队组建的目的是维护人类的自由与安全。他们的对手是妄图统治世界的残忍的眼镜蛇部队。影片计划下个月中旬在洛杉矶开拍，并于2009年8月7日上映。
-<strong>更新：</strong>丹尼斯&middot;奎德（Dennis Quaid）也加入了《特种部队》，他将扮演霍克将军（General Hawk）。
-至此，加盟此片的演员已经有“男爵夫人”西耶娜&middot;米勒（Sienna Miller）、“Ripcord”马龙&middot;韦恩斯（Marlon Wayans）、“Rex”约瑟夫&middot;高登&middot;拉维特（Joseph Gordon-Levitt）、“公爵”钱宁&middot;塔图姆（Channing Tatum）、“蛇眼”雷&middot;帕克（Ray Park）、“红发女郎”雷切尔&middot;妮科尔斯（Rachel Nichols）、“忍者白幽灵”李秉宪（Byung-hun Lee）、“Breaker”萨伊德&middot;塔马乌伊（Said Taghmaoui）以及“Heavy Duty”阿德沃尔&middot;阿吉纽依-艾格拜吉（Adewale Akinnuoye-Agbaje）。
+<strong>更新：</strong>丹尼斯·奎德（Dennis Quaid）也加入了《特种部队》，他将扮演霍克将军（General Hawk）。
+至此，加盟此片的演员已经有“男爵夫人”西耶娜·米勒（Sienna Miller）、“Ripcord”马龙·韦恩斯（Marlon Wayans）、“Rex”约瑟夫·高登·拉维特（Joseph Gordon-Levitt）、“公爵”钱宁·塔图姆（Channing Tatum）、“蛇眼”雷·帕克（Ray Park）、“红发女郎”雷切尔·妮科尔斯（Rachel Nichols）、“忍者白幽灵”李秉宪（Byung-hun Lee）、“Breaker”萨伊德·塔马乌伊（Said Taghmaoui）以及“Heavy Duty”阿德沃尔·阿吉纽依-艾格拜吉（Adewale Akinnuoye-Agbaje）。
 作者：<strong>Nemo</strong>
 来源：http://mymovie.blogbus.com/logs/14657580.html
 这是我小时就很喜欢看的一部动画片，哈，终于有电影可看了，Ye!
