--- a/_posts/2008-09-14-%e5%83%8fsb%e4%b8%80%e6%a0%b7%e5%85%a5%e6%89%8bath-ad300.markdown
+++ b/_posts/2008-09-14-%e5%83%8fsb%e4%b8%80%e6%a0%b7%e5%85%a5%e6%89%8bath-ad300.markdown
@@ -10,13 +10,13 @@ date_gmt: !binary |-
     以400RMB从中关村某JS那入手一部铁三角AD300, 属于Hifi耳机中入门级别的。
     缺点很多，第一是太重，第二是声音有点混人声不太好（不过比之前PHILIPS的好多了），看下官方介绍吧。
     ATH-AD300 空气动圈耳机
-    &middot;三维翼支撑提供更大的舒适性并更加贴服
-    &middot;强大的钕磁体确保声音具有强劲效果
-    &middot;耳垫使用柔软顺滑的布织物
-    &middot;舒适、完全适耳的设计可减轻紧固感
-    &middot;40mm直径驱动器专为开放式耳机设计，提供强劲的声音
-    &middot;高纯度OFC输入耳线 (3.0m)
-    &middot;玻璃钢强化外壳
+    ·三维翼支撑提供更大的舒适性并更加贴服
+    ·强大的钕磁体确保声音具有强劲效果
+    ·耳垫使用柔软顺滑的布织物
+    ·舒适、完全适耳的设计可减轻紧固感
+    ·40mm直径驱动器专为开放式耳机设计，提供强劲的声音
+    ·高纯度OFC输入耳线 (3.0m)
+    ·玻璃钢强化外壳
     型号类别 开放空气动圈型  
     单元直径 &Oslash;40 mm 
     驱动单元 钕磁铁 
