--- a/_posts/2008-10-09-%e4%b8%83%e4%b8%aa%e5%8f%97%e7%94%a8%e4%b8%80%e7%94%9f%e7%9a%84%e5%bf%83%e7%90%86%e5%af%93%e8%a8%80.markdown
+++ b/_posts/2008-10-09-%e4%b8%83%e4%b8%aa%e5%8f%97%e7%94%a8%e4%b8%80%e7%94%9f%e7%9a%84%e5%bf%83%e7%90%86%e5%af%93%e8%a8%80.markdown
@@ -74,7 +74,7 @@ date_gmt: !binary |-
 这个寓言还可以引申出另一种含义：不要太指望神秘的心理治疗的魔力。最重要的力量永远在你自己的身上，奥秘的知识、玄妙的潜能开发、炫目的成功学等等，都远不如你自己身上已有的力量重要。我们习惯去外面寻找答案，去别人那里寻找力量，结果忘记了力量就在自己身上。<span class="Apple-converted-space"> </span>
 切记：别人的知识不能自动地拯救你。<span class="Apple-converted-space"> </span>
 如果一些连珠的妙语打动了你，如果一些文字或新信条启发了你。那么，这些别人的文字和经验都只是一个开始，更重要的是，你把你以为好的知识真正运用到你自己的生命中去。<span class="Apple-converted-space"> </span>
-犹太哲学家马丁&middot;布伯的这句话，我一直认为是最重要的：<span class="Apple-converted-space"> </span>
+犹太哲学家马丁·布伯的这句话，我一直认为是最重要的：<span class="Apple-converted-space"> </span>
 你必须自己开始。假如你自己不以积极的爱去深入生存，假如你不以自己的方式去为自己揭示生存的意义，那么对你来说，生存就将依然是没有意义的。<span class="Apple-converted-space"> </span>
 （六）放弃的寓言：蜜蜂与鲜花<span class="Apple-converted-space"> </span>
 玫瑰花枯萎了，蜜蜂仍拼命吮吸，因为它以前从这朵花上吮吸过甜蜜。但是，现在在这朵花上，蜜蜂吮吸的是毒汁。<span class="Apple-converted-space"> </span>
