--- a/_posts/2008-12-27-712.markdown
+++ b/_posts/2008-12-27-712.markdown
@@ -8,7 +8,7 @@ date_gmt: !binary |-
   MjAwOC0xMi0yNyAxMzo1MzowMyArMDgwMA==
 ---
 太喜欢他的《海上钢琴师》了！哇啊啊啊~~~~
-中文名：蒂姆&middot;罗斯Tim Roth(中译: "蒂姆&middot;罗斯"或"提姆&middot;罗斯")
+中文名：蒂姆·罗斯Tim Roth(中译: "蒂姆·罗斯"或"提姆·罗斯")
 英文名：Tim Roth 本名Timothy Simon Roth
 性 别：男
 生 日：1961-05-14生于伦敦
@@ -31,14 +31,14 @@ date_gmt: !binary |-
 　　之后是第一部带给他以国际性声誉的电影, 与Robert Altman合作, 反映凡高晚年生活的: Vincent &amp; Theo. 他对凡高相当熟悉, 因为凡高不仅是他的偶像, 更是父亲的偶像。 然而这个时候, 他父亲去世了。他的遗体火化之际, 身边只有一张儿子从凡高剧组寄来的照片, 以及一束向日葵。工党派人出席了父亲的葬礼, 但是TR并不在场, 他那时正在埃赛俄比亚。那一夜, 为了父亲, 可能也为了自己, 他向着英国的方向痛哭。
 　　" . . .But when I was in my twenties, I realized how wonderful he was . . . The male figure in my life . . .for good or for bad." 他的父亲是对他一生影响最大的人.十年后在巴黎接受采访, 提到父亲他依旧热泪盈眶 : " I wanted to be there, but I was in the middle of hell . . . you don't want to know . . . my father never believed in God, so I felt I could cry for him over there in Ethiopia."
 　　他的名字再度与Gary Oldman联系到了一起。 黑色喜剧《Rosencrantz And Guildenstern Are Dead》，赢得的是热烈的赞扬。但他在英国的前景依旧黯淡。他与保守党政府的矛盾也闹到不可调和的地步: 在一次颁奖典礼上, 他公开指称撒切尔夫人为cunt . 这太过份了, 他被赶出了英国 。
-　　家族本姓"史密斯", 其父因同情二战中的犹太人,改做犹太姓Roth.但是有关Tim是犹太裔的说法是不正确的, Tim没有犹太血统。1961年5月14日出生于英国伦敦，善于模仿各种口音，常被误认为美国人。他在坎伯维尔艺术学院学习过雕塑，之后退学，一心追求表演事业。第一个突破是在英国电视电影《英国制造》（1982）中扮演的角色。1984年演出处女作《The Hit》，获得高度评价。在《凡高于提奥》中扮演的文森特&middot;凡高以及在《君臣人子小命呜呼》中于加里&middot;奥德曼的对手戏得到了业界注意。昆汀&middot;塔伦蒂诺原本打算让罗思扮演《落水狗》中的金先生或者粉先生，但是罗思争取到了橙先生一角，从而迎来了自己事业上的巨大突破。《低俗小说》中，昆汀再次邀请了罗思；1995年的《四个房间》则是罗思与昆汀的第三次合作。同一年，罗思凭借他在古装片《赤胆豪情》中的反角赢得了奥斯卡题名。接着。他还在伍迪&middot;艾伦的音乐电影《人人都说我爱你》中一显歌喉。1996年以《赤胆豪情》入围奥斯卡最佳男配角奖。扮演那么多坏人和罪犯之后，罗思在《海上钢琴师》中出神入化地塑造了一个不谙世事、纯洁无辜的钢琴天才，这个角色使他赢得了大量观众的喜爱。1999年晋身导演之林，《The War Zone》为他夺得欧洲电影奖年度发现奖。今日的罗思已是受人尊敬的演技派，颇得导演和影评人青睐。
+　　家族本姓"史密斯", 其父因同情二战中的犹太人,改做犹太姓Roth.但是有关Tim是犹太裔的说法是不正确的, Tim没有犹太血统。1961年5月14日出生于英国伦敦，善于模仿各种口音，常被误认为美国人。他在坎伯维尔艺术学院学习过雕塑，之后退学，一心追求表演事业。第一个突破是在英国电视电影《英国制造》（1982）中扮演的角色。1984年演出处女作《The Hit》，获得高度评价。在《凡高于提奥》中扮演的文森特·凡高以及在《君臣人子小命呜呼》中于加里·奥德曼的对手戏得到了业界注意。昆汀·塔伦蒂诺原本打算让罗思扮演《落水狗》中的金先生或者粉先生，但是罗思争取到了橙先生一角，从而迎来了自己事业上的巨大突破。《低俗小说》中，昆汀再次邀请了罗思；1995年的《四个房间》则是罗思与昆汀的第三次合作。同一年，罗思凭借他在古装片《赤胆豪情》中的反角赢得了奥斯卡题名。接着。他还在伍迪·艾伦的音乐电影《人人都说我爱你》中一显歌喉。1996年以《赤胆豪情》入围奥斯卡最佳男配角奖。扮演那么多坏人和罪犯之后，罗思在《海上钢琴师》中出神入化地塑造了一个不谙世事、纯洁无辜的钢琴天才，这个角色使他赢得了大量观众的喜爱。1999年晋身导演之林，《The War Zone》为他夺得欧洲电影奖年度发现奖。今日的罗思已是受人尊敬的演技派，颇得导演和影评人青睐。
 　　父亲为自由撰稿的记者,母亲是教师和画家, 家中还有一姐。幼年父母离异, Tim与姐姐由母亲抚养。由于瘦弱矮小, 青少年时代常受欺负。在坎布维尔艺术学院学习过雕刻，之后辍学，一心追求表演事业。
-　　1981年，英国大导艾伦&middot;克拉克启用几乎没有表演经验的Tim在电视电影《英国制造》中担纲主演,演出聪敏而不知悔改的新纳粹少年,这也成为Tim的代表作之一。 1984年演出电影处子作《The Hit》，获高度评价。 Tim在《文森特与提奥》中扮演的文森特&middot;凡高以及在《君臣人子小命呜呼》中与加里&middot;奥德曼的对手戏在业内口碑很高。
-　　1991年前后Tim赴美发展,后结识鬼才导演昆汀&middot;塔伦蒂诺。 昆汀原本打算让Tim扮演《落水狗》中的金先生或粉先生，但是Tim争取到了橙先生一角。 此片使Tim开始赢得了美国影迷的注意。 1993年和1995年, Tim和昆汀又再度合作了《低俗小说》和《四个房间》。 1996年，Tim还凭借古装片《赤胆豪情》中的反角和在小成本电影《小奥德赛》中的出色表现，分别入围奥斯卡最佳男配角奖和"独立精神"最佳男主角奖。 接着,他又在伍迪&middot;艾伦的歌舞片《人人都说我爱你》中一展歌喉。 扮演了无数罪犯和边缘人之后，Tim在1998年的意大利电影《海上钢琴师》中出神入化地塑造了一个不谙世事的钢琴天才，这个角色使他赢得了许多观众的喜爱。
-　　1999年Tim晋身导演之林，《The War Zone》被著名影评人罗杰&middot;伊伯特评为1999年度"十大佳片"之一。
+　　1981年，英国大导艾伦·克拉克启用几乎没有表演经验的Tim在电视电影《英国制造》中担纲主演,演出聪敏而不知悔改的新纳粹少年,这也成为Tim的代表作之一。 1984年演出电影处子作《The Hit》，获高度评价。 Tim在《文森特与提奥》中扮演的文森特·凡高以及在《君臣人子小命呜呼》中与加里·奥德曼的对手戏在业内口碑很高。
+　　1991年前后Tim赴美发展,后结识鬼才导演昆汀·塔伦蒂诺。 昆汀原本打算让Tim扮演《落水狗》中的金先生或粉先生，但是Tim争取到了橙先生一角。 此片使Tim开始赢得了美国影迷的注意。 1993年和1995年, Tim和昆汀又再度合作了《低俗小说》和《四个房间》。 1996年，Tim还凭借古装片《赤胆豪情》中的反角和在小成本电影《小奥德赛》中的出色表现，分别入围奥斯卡最佳男配角奖和"独立精神"最佳男主角奖。 接着,他又在伍迪·艾伦的歌舞片《人人都说我爱你》中一展歌喉。 扮演了无数罪犯和边缘人之后，Tim在1998年的意大利电影《海上钢琴师》中出神入化地塑造了一个不谙世事的钢琴天才，这个角色使他赢得了许多观众的喜爱。
+　　1999年Tim晋身导演之林，《The War Zone》被著名影评人罗杰·伊伯特评为1999年度"十大佳片"之一。
 　　今天的Tim接拍电影时依旧遵循严肃和艺术的准则，不计报酬和戏份地扑向任何与大师级人物或有才华的初出茅庐者合作的机会，是一位倍受尊敬的独立影人。
 　　Tim目前和身为时尚设计师的妻子Nikki、他们的两个儿子（11岁的Timothy Hunter Roth，9岁的Michael Cormac Roth）以及一条宠物狗生活在距洛杉矶不远的帕萨迪纳家中。22岁的长子（和昔日女友）Jack则在伦敦做了一名演员。
-　　1961年蒂姆&middot;罗斯出生在英国伦敦一个优越的家庭，母亲是一名教师兼画家，父亲是一名记者。蒂姆非常善于模仿各种口音，所以常常被误认为是美国人。在他从事演艺事业以前曾在Camberwell艺术学院学习雕塑，不过很快就放弃并转向表演。1982年蒂姆拍摄了他的第一部电视电影《英国制造》（Made in Britain），他在片中饰演的角色Trevor给观众留下极为深刻的印象。接下来蒂姆又与导演迈克&middot;李（Mike Leigh）合作拍摄了《Meantime》。蒂姆的第一部电影是1984年的《撞击》（The Hit），不过他表现更为出色的电影却是6年后的《梵高与提奥》（Vincent &amp; Theo）以及与加里&middot;奥德曼（Gary Oldman）配戏的《《君臣人子小命呜呼》（ Rosencrantz &amp; Guildenstern Are Dead）。蒂姆在洛杉矶寻找机会的时候被正在为影片《落水狗》（Reservoir Dogs）选角的年轻导演昆丁&middot;塔伦蒂诺（Quentin Tarantino）相中，本来想让他出演犯罪集团中Mr. Blonde 或者Mr. Pink，但蒂姆本人却更青睐流血过多而亡的Mr. Orange一角，并最终赢得出演机会。这部影片证明了蒂姆的选择是多么正确，因为观众们对Mr. Orange始终难以忘怀。1995年，罗斯与导演塔伦蒂诺在《四个房间》（Four Rooms）中再度合作，同年他因在影片《赤胆豪情》（Rob Roy）中的表现而获得了一项奥斯卡提名。蒂姆&middot;罗斯的作品还包括《人人都说我爱你》（Everyone Says I Love You）、《浪子回头妙事多》（Gridlockd）、《海上钢琴师》（Leggenda del pianista sulloceano, La）、《战争地带》（The War Zone）、《人猿星球》（Planet of the Apes）、《银城竞选》（Silver City）和《鬼水怪谈》（Dark Water）等。
+　　1961年蒂姆·罗斯出生在英国伦敦一个优越的家庭，母亲是一名教师兼画家，父亲是一名记者。蒂姆非常善于模仿各种口音，所以常常被误认为是美国人。在他从事演艺事业以前曾在Camberwell艺术学院学习雕塑，不过很快就放弃并转向表演。1982年蒂姆拍摄了他的第一部电视电影《英国制造》（Made in Britain），他在片中饰演的角色Trevor给观众留下极为深刻的印象。接下来蒂姆又与导演迈克·李（Mike Leigh）合作拍摄了《Meantime》。蒂姆的第一部电影是1984年的《撞击》（The Hit），不过他表现更为出色的电影却是6年后的《梵高与提奥》（Vincent &amp; Theo）以及与加里·奥德曼（Gary Oldman）配戏的《《君臣人子小命呜呼》（ Rosencrantz &amp; Guildenstern Are Dead）。蒂姆在洛杉矶寻找机会的时候被正在为影片《落水狗》（Reservoir Dogs）选角的年轻导演昆丁·塔伦蒂诺（Quentin Tarantino）相中，本来想让他出演犯罪集团中Mr. Blonde 或者Mr. Pink，但蒂姆本人却更青睐流血过多而亡的Mr. Orange一角，并最终赢得出演机会。这部影片证明了蒂姆的选择是多么正确，因为观众们对Mr. Orange始终难以忘怀。1995年，罗斯与导演塔伦蒂诺在《四个房间》（Four Rooms）中再度合作，同年他因在影片《赤胆豪情》（Rob Roy）中的表现而获得了一项奥斯卡提名。蒂姆·罗斯的作品还包括《人人都说我爱你》（Everyone Says I Love You）、《浪子回头妙事多》（Gridlockd）、《海上钢琴师》（Leggenda del pianista sulloceano, La）、《战争地带》（The War Zone）、《人猿星球》（Planet of the Apes）、《银城竞选》（Silver City）和《鬼水怪谈》（Dark Water）等。
 　　代表作：
 　　演出：
 　　The incredible hulk 神奇绿巨人（2008）
