--- a/_posts/2009-01-04-%e6%88%91%e8%a6%81%e6%8a%8a%e8%bf%99%e6%9c%80%e5%8d%91%e5%be%ae%e7%9a%84%e7%94%9f%e5%91%bd%e6%b4%bb%e5%87%ba%e6%9c%80%e8%80%80%e7%9c%bc%e7%9a%84%e5%85%89%e5%bd%a9%ef%bc%81.markdown
+++ b/_posts/2009-01-04-%e6%88%91%e8%a6%81%e6%8a%8a%e8%bf%99%e6%9c%80%e5%8d%91%e5%be%ae%e7%9a%84%e7%94%9f%e5%91%bd%e6%b4%bb%e5%87%ba%e6%9c%80%e8%80%80%e7%9c%bc%e7%9a%84%e5%85%89%e5%bd%a9%ef%bc%81.markdown
@@ -10,24 +10,24 @@ date_gmt: !binary |-
 <p align="center"><img src="http://img1.qq.com/ent/pics/5188/5188725.jpg" onclick="zoom(this)" onload="attachimg(this, 'load')" alt="" border="0" />
 
 　　世界上有一种人，在我们身边过着平淡的生活。他从我们身边擦肩而过，我们不会多看他一眼，或者干脆视而不见。但突然有一天，他站在了那个属于他的舞台
-上，就在一瞬间爆发出闪耀的巨星光芒。毫无疑问，上个月在英国王牌选秀节目“星光大道”上夺冠的保罗&middot;珀特斯（Paul Potts）就是这样一个人。
+上，就在一瞬间爆发出闪耀的巨星光芒。毫无疑问，上个月在英国王牌选秀节目“星光大道”上夺冠的保罗·珀特斯（Paul Potts）就是这样一个人。
 
 
 　　几乎在一夜之间，这个卖手机为生，长得像个滑稽土豆的36岁老哥，红透了英伦三岛，震惊了世界乐坛，BBC和CNN滚动播出他的专题节目。他高亢华丽
-的嗓音透过互联网和海底电缆，让万里之外的中国歌迷听得热泪盈眶。和身世苦难却又“咸鱼翻身”的保罗&middot;珀特斯式奇迹相比，国内那些充满脂粉气的选秀冠军的
+的嗓音透过互联网和海底电缆，让万里之外的中国歌迷听得热泪盈眶。和身世苦难却又“咸鱼翻身”的保罗·珀特斯式奇迹相比，国内那些充满脂粉气的选秀冠军的
 成名之路，有些不值得一提。
 
 
 　　英国“星光大道”是英国ITV和爱尔兰TV3的一档选秀节目，节目的优胜者将获得十万英镑（150万元人民币）的奖金，并将参加英国皇家大汇演，在利
 物浦的帝国剧场上为女王和皇家成员献艺。
-它的“考官”非常专业，如现年45岁的塞门&middot;克威尔(SimonCowel)，是现代流行音乐先河的开创者，而另一位评委皮尔斯&middot;摩根
+它的“考官”非常专业，如现年45岁的塞门·克威尔(SimonCowel)，是现代流行音乐先河的开创者，而另一位评委皮尔斯·摩根
 （PiersMorgan）则融合演员、杂志总编和美国偶像评委的三重身份为一身。
-<strong>解码&middot;影响 国际知名度超过维塔斯</strong>
+<strong>解码·影响 国际知名度超过维塔斯</strong>
 
 
-　　保罗&middot;珀特斯，是6月18日英国选秀节目“星光大道”总决赛上新出炉的霸主，因选秀中完美地演唱了歌剧《图兰朵》中的著名咏叹调《今夜无人入睡》而震
+　　保罗·珀特斯，是6月18日英国选秀节目“星光大道”总决赛上新出炉的霸主，因选秀中完美地演唱了歌剧《图兰朵》中的著名咏叹调《今夜无人入睡》而震
 惊世界。他参加比赛时高歌的片段在国际颇有影响的视频网站YouTube上，全球点击率高达接近神话般的1亿次。仅一个多月后，保罗趁势推出了自己的首张
-个人专辑《onechance》（《一个机会》），该专辑除了收录有保罗的成名曲《今夜无人入睡》，还翻唱了莎拉&middot;布莱蔓曾唱过的《告别时刻》、英国摇滚
+个人专辑《onechance》（《一个机会》），该专辑除了收录有保罗的成名曲《今夜无人入睡》，还翻唱了莎拉·布莱蔓曾唱过的《告别时刻》、英国摇滚
 乐队R.E.M的名曲《每人都受伤》，此外还有电影《猎鹿人》的主题曲等，这张拼盘式碟片首周在英国热卖13万张，把不少英伦乐坛的当红天王天后拉下马
 来，他洋洋得意地登上英国大榜排行宝座。
 
@@ -37,10 +37,10 @@ PaulPotts，关于他的相关网页有176万个，而输入维塔斯则是67万
 红方式被人封了“歌剧魔人”的外号，甚至英国女王伊丽莎白二世还专门召见他，并亲耳聆听了保罗的歌声，被他震撼和感动，当众鼓掌不止。
 
 
-<strong>解码&middot;声音 他比帕瓦罗蒂更饱含深情</strong>
+<strong>解码·声音 他比帕瓦罗蒂更饱含深情</strong>
 
 
-<strong>　　</strong>这个身材矮胖、长着一口烂牙的手机小贩是怎样征服国际乐坛的呢？让我们把镜头回放到1个半月以前，地点是保罗&middot;珀
+<strong>　　</strong>这个身材矮胖、长着一口烂牙的手机小贩是怎样征服国际乐坛的呢？让我们把镜头回放到1个半月以前，地点是保罗·珀
 特斯一战成名的“星光大道”比赛场上。当时，习惯于向人们兜售廉价手机的保罗站在舞台上面对那么多观众非常地不安，不停地摆弄自己的手来缓解紧张的心情。
 比赛开始时，主持人问他：“你要唱什么？”保罗傻傻地回答：“只是唱歌剧而已……”结果评审之一Simon很不以为然地说：“哦，那你开始吧！”保罗唱的
 是普契尼的著名歌剧《图兰朵》里面的咏叹调《今夜无人入睡》，当第一个音符从他嘴中飙出来时，现场人都被震惊到说不出话来，Simon旁边的美女评判眼眶
@@ -49,12 +49,12 @@ PaulPotts，关于他的相关网页有176万个，而输入维塔斯则是67万
 
 
 　　保罗征服观众的法宝是他那华美而优雅的声音，这声音与他不完美的外形形成了鲜明对比。当他在台上深情演唱时，歌声仿佛清澈得没有尘埃的流水，从空中而
-来，淌过心田，穿越过去的一切记忆，让人像初生的婴儿一样接受通透的洗礼。有国内歌迷评价说：“相比于歌剧之王帕瓦罗蒂，保罗&middot;珀特斯的《今夜无人入睡》
-更能带来一种流泪的感动，一种强烈的悲痛与振奋。”还有人说：“保罗&middot;珀特斯的歌，适合一个人坐在黑暗里静静地听，它能够让人找回那个被自己遗弃的自己，
+来，淌过心田，穿越过去的一切记忆，让人像初生的婴儿一样接受通透的洗礼。有国内歌迷评价说：“相比于歌剧之王帕瓦罗蒂，保罗·珀特斯的《今夜无人入睡》
+更能带来一种流泪的感动，一种强烈的悲痛与振奋。”还有人说：“保罗·珀特斯的歌，适合一个人坐在黑暗里静静地听，它能够让人找回那个被自己遗弃的自己，
 找回心底那些无处安放的纯真。即使我们不会欣赏歌剧，也听不懂意大利语，也仍然能够体会到那种无与伦比的震撼。来自心灵，不需要任何粉饰。”
 
 
-<strong>解码&middot;人生 “倒霉蛋”曾经历重重苦难</strong>
+<strong>解码·人生 “倒霉蛋”曾经历重重苦难</strong>
 
 
 <strong>　　</strong>保罗歌声中充满着感动人的力量，这是因为他的人生曾经历经苦难。保罗在成名之前可算是一个标准的“倒霉蛋”。因为
