--- a/_posts/2009-02-02-%e4%b8%ad%e5%9b%bd%e7%bb%9d%e7%be%8e%e6%83%85%e8%af%97%e5%90%8d%e5%8f%a5%e6%8e%92%e8%a1%8c%e6%a6%9ctop100.markdown
+++ b/_posts/2009-02-02-%e4%b8%ad%e5%9b%bd%e7%bb%9d%e7%be%8e%e6%83%85%e8%af%97%e5%90%8d%e5%8f%a5%e6%8e%92%e8%a1%8c%e6%a6%9ctop100.markdown
@@ -8,10 +8,10 @@ date_gmt: !binary |-
   MjAwOS0wMi0wMiAxNDowOTowNiArMDgwMA==
 ---
 １　柳永　　　凤栖梧　　　　　　衣带渐宽终不悔，为伊消得人憔悴。 
-　　２　佚名　　　诗经&middot;邶风&middot;击鼓　死生契阔，与子成说。执子之手，与子偕老。 
+　　２　佚名　　　诗经·邶风·击鼓　死生契阔，与子成说。执子之手，与子偕老。 
 　　３　秦观　　　鹊桥仙　　　　　　两情若是久长时，又岂在朝朝暮暮。 
 　　４　李白　　　三五七言　　　　　相思相见知何日？此时此夜难为情。 
-　　５　佚名　　　凤求凰&middot;琴歌　　　有美人兮，见之不忘，一日不见兮，思之如狂。 
+　　５　佚名　　　凤求凰·琴歌　　　有美人兮，见之不忘，一日不见兮，思之如狂。 
  
 　　６　郑愁予　　赋别　　　　　　　这次我离开你，是风，是雨，是夜晚；你笑了笑，我摆一摆手，一条寂寞的路便展向两头了。 
 　　７　李白　　　三五七言　　　　　入我相思门，知我相思苦，长相思兮长相忆，短相思兮无穷极。 
@@ -43,7 +43,7 @@ date_gmt: !binary |-
 　２９　李冠　　　蝶恋花　　　　　　一寸相思千万绪，人间没箇安排处。 
 　３０　苏轼　　　江城子　　　　　　十年生死两茫茫，不思量，自难忘，千里孤坟，无处话凄凉。 
  
-　３１　佚名　　　诗经&middot;唐风&middot;绸缪　今夕何夕，见此良人。 
+　３１　佚名　　　诗经·唐风·绸缪　今夕何夕，见此良人。 
 　３２　白居易　　长恨歌　　　　　　天长地久有时尽，此恨绵绵无绝期。 
 　３３　白居易　　长恨歌　　　　　　在天愿作比翼鸟，在地愿为连理枝。 
 　３４　文廷式　　蝶恋花　　　　　　重叠泪痕缄锦字，人生只有情难死。 
@@ -52,7 +52,7 @@ date_gmt: !binary |-
 　３６　李商隐　　无题　　　　　　　春蚕到死丝方尽，蜡炬成灰泪始乾。 
 　３７　况周颐　　减字浣溪沙　　　　他生莫作有情痴，人间无地著相思。 
 　３８　欧阳修　　玉楼春　　　　　　尊前拟把归期说，未语春容先惨咽。 
-　３９　佚名　　　诗经&middot;周南&middot;关雎　关关雎鸠，在河之洲。窈宨淑女，君子好逑。 
+　３９　佚名　　　诗经·周南·关雎　关关雎鸠，在河之洲。窈宨淑女，君子好逑。 
 　４０　欧阳修　　玉楼春　　　　　　人生自是有情痴，此恨不关风与月。 
  
 　４１　柳永　　　雨霖铃　　　　　　此去经年，应是良辰好景虚设。便纵有，千种风情，更与何人说。 
@@ -93,7 +93,7 @@ date_gmt: !binary |-
  
 　７１　张泌　　　寄人　　　　　　　多情只有春庭月，犹为离人照落花。 
 　７２　刘禹锡　　竹枝词四首其二　　花红易衰似郎意，水流无限似侬愁。 
-　７３　晏殊　　　山亭柳&middot;赠歌者　　若有知音见采，不辞遍唱阳春。  
+　７３　晏殊　　　山亭柳·赠歌者　　若有知音见采，不辞遍唱阳春。  
 　７４　范仲淹　　苏幕遮　　　　　　明月楼高休独倚，酒入愁肠，化作相思泪。 
 　７５　陈叔达　　自君之出矣　　　　思君如明烛，煎心且衔泪。 
  
