--- a/_posts/2007-01-09-%e4%b8%ba%e4%bd%95%e6%89%91%e5%85%8b%e7%89%8c%e7%9a%84jqk%e4%b8%8d%e5%8f%ab111213%ef%bc%9f.markdown
+++ b/_posts/2007-01-09-%e4%b8%ba%e4%bd%95%e6%89%91%e5%85%8b%e7%89%8c%e7%9a%84jqk%e4%b8%8d%e5%8f%ab111213%ef%bc%9f.markdown
@@ -12,7 +12,7 @@ date_gmt: !binary |-
 红桃K是查尔斯一世弗兰克国王，他叫沙勒曼，是四张国王牌中唯一不留胡须的国王。 
 方块K是罗马帝国的国王、名将和政治家凯萨，是四张国王牌中唯一一张侧面像。 
 梅花K是最早征服世界的马其顿帝国国王亚力山大，他的衣服上总是佩戴着配有十字架的珠宝。 
-黑桃Q是希腊的智慧和战争女神帕拉斯&middot;阿西纳，是四张皇后牌中唯一手持武器的一位皇后。 
+黑桃Q是希腊的智慧和战争女神帕拉斯·阿西纳，是四张皇后牌中唯一手持武器的一位皇后。 
 红桃Q、方块Q分别是朱尔斯和莱克尔皇后。 
 梅花Q名叫阿金尼，由女王(Regina)一词而来，她手持蔷薇花，表示英国以红色蔷薇花为标志的兰开斯特王族和以白色蔷薇花为标志的约克王族经过蔷薇战争后终于和解，将双方的蔷薇花结在一起。 
 黑桃J和方块J分别为查尔斯一世的侍从霍克拉和洛兰。 
