--- a/_posts/2006-11-11-%e6%88%91%e7%9a%84%e6%9e%81%e9%99%90%e7%bc%96%e7%a8%8b%e4%bd%93%e9%aa%8c.markdown
+++ b/_posts/2006-11-11-%e6%88%91%e7%9a%84%e6%9e%81%e9%99%90%e7%bc%96%e7%a8%8b%e4%bd%93%e9%aa%8c.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: 我的&#8221;极限编程&#8221;体验
+title: 我的“极限编程”体验
+permalink: my-xp-programing-experience
 author: gavinkwoe
 date: !binary |-
   MjAwNi0xMS0xMSAxMzo1MTozMyArMDgwMA==
