--- a/_posts/2006-12-10-%e4%b8%9c%e5%8c%97%e4%ba%ba%e3%81%ae%e6%9c%80%e7%88%b1%ef%bc%8c%e9%85%b8%e8%8f%9c%e7%82%96%e6%8e%92%e9%aa%a8.markdown
+++ b/_posts/2006-12-10-%e4%b8%9c%e5%8c%97%e4%ba%ba%e3%81%ae%e6%9c%80%e7%88%b1%ef%bc%8c%e9%85%b8%e8%8f%9c%e7%82%96%e6%8e%92%e9%aa%a8.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 东北人の最爱，&#8221;酸菜炖排骨&#8221;
+title: 东北人の最爱，酸菜炖排骨
 author: Alvin
 date: !binary |-
   MjAwNi0xMi0xMCAyMTo0MjoxMSArMDgwMA==
@@ -13,4 +13,5 @@ date_gmt: !binary |-
 1、先将排骨剁成小块，只取中间的小排骨，两头的大骨头不要（留着熬汤，扔掉太可惜啦）。过开水烫去血沫。买来的酸菜切小块，将酸菜的厚帮子片成薄片，在冷水中浸泡一会儿。土豆去皮切大块。粉条用热水泡软。葱姜切沫。 
 2、在烫排骨的过程中，可准备配料。在小碗中配料酒、花椒粉、盐、鸡精、水，搅拌均匀。 
 3、烧热油锅，放入葱姜沫爆香。倒入排骨翻炒，加入酱油、花椒粉。翻炒一会儿至排骨5成熟时放入酸菜、土豆和粉条，加小碗中配好的料。再多加一小碗水，淹 过一半的菜就可以，加盖，改中火炖。十分钟后，就可以出锅啦。注意炖的时候不要让水烧干了，否则影响菜的扮相和口感。  
-<img src="http://www.024fan.com//upload_img/dinner/200605041431147923.jpg" alt="" />
+
+[酸菜炖排骨](http://www.024fan.com//upload_img/dinner/200605041431147923.jpg)
