--- a/_posts/2006-12-19-%e9%83%bd%e6%98%af%e4%bd%a0.markdown
+++ b/_posts/2006-12-19-%e9%83%bd%e6%98%af%e4%bd%a0.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 都是你&#8230;&#8230;
+title: 都是你
 author: gavinkwoe
 date: !binary |-
   MjAwNi0xMi0xOSAxNzoyMDoxMyArMDgwMA==
